@@ -1,3 +1,14 @@
+2003-09-08  Andrew Cagney  <cagney@redhat.com>
+
+	* dwarf2-frame.c (enum dwarf2_reg_rule): New, replace anonymous
+	enum.  Add REG_UNSPECIFIED, rename REG_UNSAVED to REG_UNDEFINED
+	and REG_UNMODIFIED to REG_SAME_VALUE.
+	(execute_cfa_program): Update.
+	(dwarf2_frame_cache): Update.  Initialize table to
+	REG_UNSPECIFIED, complain if CFI fails to specify a register's
+	location.
+	(dwarf2_frame_prev_register): Update.  Handle REG_UNSPECIFIED.
+
 2003-09-08  Daniel Jacobowitz  <drow@mvista.com>
 
 	* frame.c (deprecated_safe_get_selected_frame): New function.
